# captchaaudio

./: .gitignore  README.md  pyproject.toml  x_pyproject.toml
.github/workflows/: build.yml
captchaaudio/: audio.py  launcher.py  main.py
