[tool.poetry]
name = "captchaaudio"
version = "0.1.1"
description = ""
authors = ["Oliver Bonham-Carter <obonhamcarter@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.1"
rich = "^13.9.4"
black = "^25.1.0"

[tool.poetry.scripts]
captchaaudio = "captchaaudio.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
